[feature] View timeline axis as durations